--- a/src/ui/components/Timeline/ScrollContainer.css
+++ b/src/ui/components/Timeline/ScrollContainer.css
@@ -1,14 +1,14 @@
-.replay-player .scroll-container {
+.timeline .scroll-container {
   overflow-y: auto;
   scrollbar-width: none;
   height: 100%;
 }
 
-.replay-player .scroll-content {
+.timeline .scroll-content {
   display: flex;
   color: transparent;
 }
 
-.replay-player .scroll-container::-webkit-scrollbar {
+.timeline .scroll-container::-webkit-scrollbar {
   display: none;
 }
