--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -59,7 +59,8 @@
   border-right-style: solid;
 }
 
-.timeline .message-container {
+.timeline .message-container,
+.timeline .preview-message-container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -77,22 +78,20 @@
   pointer-events: all;
 }
 
+.timeline .message-preview {
+  z-index: var(--z-index-2--hovered-message);
+}
+
 .timeline .message:hover {
   cursor: pointer;
 }
 
-.timeline .message.highlighted .fill {
-  fill: var(--replaying-marker-stroke);
-  transition-duration: 100ms;
-}
-
-.timeline .message.highlighted  {
-  transform: scale(1.2);
-  transition-duration: 100ms;
-}
-
 .timeline .message .fill {
   fill: var(--replaying-marker-fill);
+}
+
+.timeline.dimmed .message .fill {
+  fill: var(--primary-accent-light);
 }
 
 .timeline .message .stroke {
@@ -111,6 +110,10 @@
 .timeline .message.paused .stroke {
   stroke: var(--replaying-paused-marker-stroke);
   stroke: var(--theme-body-background);
+}
+
+.timeline.dimmed .message-preview .fill {
+  fill: var(--replaying-marker-fill);
 }
 
 .timeline .message:focus {
@@ -167,6 +170,10 @@
   margin-bottom: auto;
   top: 0;
   bottom: 0;
+}
+
+.timeline.dimmed .progress-line {
+  background: var(--primary-accent-light);
 }
 
 .timeline .overlay-container:hover .progress-line {
