Occupy the widget bottom row when there are no hits

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
@@ -7,6 +7,12 @@
   align-items: center;
 }
 
+.breakpoint-navigation.empty .breakpoint-navigation-status-container,
+.breakpoint-navigation.empty .breakpoint-navigation-status {
+  width: 100%;
+  text-align: center;
+}
+
 .breakpoint-navigation-commands {
   display: flex;
   flex-direction: row;
