--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -11,10 +11,11 @@
   background: var(--theme-toolbar-background);
   border-radius: 4px;
   border: 1px solid var(--theme-splitter-color);
-  width: 500px;
   font-family: sans-serif;
   line-height: 16px;
   color: var(--theme-toolbar-color);
+  max-width: 500px;
+  min-width: 300px
 }
 
 .breakpoint-panel.editing {
