displaying message now when there are no breakpoints to show in the breakpoint panel (#1389)
* displaying message now when there are no breakpoints to show in the breakpoint panel

* changed classname to be more descriptive

Co-authored-by: karina <karina@replay.io>

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
@@ -6,6 +6,11 @@
   overflow-x: auto;
 }
 
+.empty-state-content {
+  padding: 8px;
+  white-space: pre-wrap;
+}
+
 .breakpoints-list *:focus:not(:focus-visible) {
   outline: none;
   background: inherit;
