--- a/src/ui/components/SecondaryToolbox/CommentsPanel.css
+++ b/src/ui/components/SecondaryToolbox/CommentsPanel.css
@@ -121,6 +121,7 @@
   font-size: 1.25rem;
   color: var(--theme-body-color);
   margin-bottom: 4px;
+  font-weight: bold;
 }
 
 .comments-panel .event .item-label {
@@ -134,9 +135,16 @@
   color: var(--theme-comment);
 }
 
-.comments-panel .img {
+.comments-panel img {
   margin-right: 8px;
   margin-top: 2px;
   width: 24px;
   height: 24px;
+  border-radius: 12px;
+}
+
+.comments-panel .event-click {
+  margin-right: 8px;
+  height: 24px;
+  width: 24px;
 }
