Clean up Viewer and Video component

--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -4,6 +4,7 @@
   font-family: sans-serif;
   display: flex;
   flex-direction: row;
+  padding-right: 1px; /* Without this, the console message overlay buttons cover the splitbox splitter. */
   --toolbox-background: #f9f9fa;
   --paused-background-color: var(--secondary-accent);
 }
