--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
 }
 
 #viewer {
+  height: 100%;
   position: relative;
   overflow: hidden;
   flex-grow: 1;
@@ -23,7 +24,6 @@
   background-color: #ececec;
   flex-grow: 1;
   position: relative;
-  padding-left: 1px;
 }
 
 .collapsed-toolbox {
