--- a/src/styles.css
+++ b/src/styles.css
@@ -9,21 +9,12 @@
   --faint-red: rgba(255, 0, 0, 0.5);
 }
 
-#viewer {
+#video {
   height: 100%;
   position: relative;
   overflow: hidden;
   flex-grow: 1;
   background-image: url("/images/playbackBG.png");
-}
-
-#outer-viewer {
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  background-color: #ececec;
-  flex-grow: 1;
-  position: relative;
 }
 
 .collapsed-toolbox {
