Hovering on a console message highlights its corresponding timeline marker and its siblings

--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -45,6 +45,7 @@
   
   --primary-accent: #1B7FE3;
   --primary-accent-light: #86BFF9;
+  --primary-accent-dark: #1B5998;
   --secondary-accent: #8330F4;
   --secondary-accent-stroke: #F9F5FF;
 
