Hovering on a console message should highlight its corresponding breakpoint widget and marker

--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -15,7 +15,12 @@
   line-height: 16px;
   color: var(--theme-toolbar-color);
   max-width: 500px;
-  min-width: 300px
+  min-width: 300px;
+  overflow: hidden;
+}
+
+.breakpoint-panel.focused {
+  border: 1px solid var(--primary-accent);
 }
 
 .breakpoint-panel.editing {
