Hovering on a console message should highlight all of its sibling console messages

--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -146,6 +146,10 @@
   overflow: hidden;
 }
 
+.webconsole-app .message.secondary-highlight {
+  background: var(--primary-accent-very-light);
+}
+
 .webconsole-app .message.error {
   z-index: 2;
   color: var(--console-error-color);
