--- a/src/devtools/client/debugger/src/components/Editor/LineNumberTooltip.css
+++ b/src/devtools/client/debugger/src/components/Editor/LineNumberTooltip.css
@@ -2,17 +2,18 @@
   position: fixed;
   line-height: 16px;
   background: var(--grey-30);
-  text-align: right;
   margin-top: -5px;
   margin-right: 8px;
   padding: 4px 8px;
   border-radius: 4px;
-  animation: static-tooltip 200ms ease 500ms;
+  animation: static-tooltip 200ms ease;
   background: var(--theme-popup-color);
   color: var(--theme-popup-background);
   font-family: sans-serif;
   opacity: 0;
   animation-fill-mode: forwards;
+  min-width: 42px; /* Reduces jitter between loading state (...) and non-loading state (3 hits) */
+  text-align: center;
 }
 
 @keyframes static-tooltip {
