--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
@@ -113,18 +113,13 @@
   background: var(--grey-30);
 }
 
-/* Enlarge all timeline markers when hovering on the widget timeline */
-.breakpoint-navigation-timeline:hover .breakpoint-navigation-timeline-point {
-  transform: scale(1.3);
-}
-
 /* Dimmed styles */
 
 .breakpoint-navigation-timeline.dimmed .breakpoint-navigation-timeline-point .fill {
   fill: var(--primary-accent-light);
 }
 
-.breakpoint-navigation-timeline.dimmed .progress-line {
+.breakpoint-navigation-timeline.dimmed .progress-line:not(.full) {
   background: var(--primary-accent-light);
 }
 
@@ -132,7 +127,9 @@
   z-index: var(--z-index-2--hovered-point-secondary);
 }
 
-.breakpoint-navigation-timeline.dimmed .breakpoint-navigation-timeline-point.secondary-highlight .fill {
+.breakpoint-navigation-timeline.dimmed
+  .breakpoint-navigation-timeline-point.secondary-highlight
+  .fill {
   fill: var(--primary-accent);
 }
 
@@ -140,6 +137,6 @@
   z-index: var(--z-index-3--hovered-point-primary);
 }
 
-.breakpoint-navigation-timeline.dimmed .breakpoint-navigation-timeline-point.primary-highlight .fill {
+.breakpoint-navigation-timeline .breakpoint-navigation-timeline-point.primary-highlight .fill {
   fill: var(--new-blue-900);
 }
