Apply hovered point UI interactions to the console, timeline and widget (#1480)

--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -15,7 +15,8 @@
   line-height: 16px;
   color: var(--theme-toolbar-color);
   max-width: 500px;
-  min-width: 300px
+  min-width: 300px;
+  overflow: hidden;
 }
 
 .breakpoint-panel.editing {
