--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -146,6 +146,14 @@
   overflow: hidden;
 }
 
+.webconsole-app .message.primary-highlight .icon.logpoint {
+  background: var(--new-blue-900);
+}
+
+.webconsole-app .message.secondary-highlight .icon.logpoint {
+  background: var(--replaying-marker-fill);
+}
+
 .webconsole-app .message.error {
   z-index: 2;
   color: var(--console-error-color);
@@ -261,7 +269,9 @@
 }
 
 .webconsole-app .message > .icon.logpoint {
-  color: var(--theme-graphs-purple);
+  background: var(--theme-emphasized-splitter-color);
+  mask-position: center;
+  mask-repeat: no-repeat;
 }
 
 .webconsole-app .message > .message-body-wrapper {
