Add hovered point interactions in viewer mode

--- a/src/ui/components/SecondaryToolbox/CommentsPanel.css
+++ b/src/ui/components/SecondaryToolbox/CommentsPanel.css
@@ -21,7 +21,8 @@
 }
 
 .comments-panel .comment:hover,
-.comments-panel .event:hover {
+.comments-panel .event:hover,
+.comments-panel .event.primary-highlight {
   border-left: 4px solid #7ed8c8;
   padding-left: 12px;
 }
