--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -144,6 +144,22 @@
   padding-right: 4px;
 }
 
+.timeline-tooltip {
+  display: flex;
+  position: absolute;
+  border: 1px solid rgb(204, 204, 204);
+  padding: 8px 12px;
+  bottom: 28px;
+  border-radius: 4px;
+  background: #ececec;
+  align-items: center;
+  justify-content: center;
+  z-index: var(--z-index-1--timeline-tooltip);
+  background: var(--theme-toolbar-background);
+  transform: translateX(-50%);
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
+}
+
 /* Add Comment Button */
 
 .timeline button.add-comment {
