--- a/src/ui/components/Header/Header.css
+++ b/src/ui/components/Header/Header.css
@@ -99,13 +99,23 @@
 }
 
 button.login {
+  color: var(--primary-accent);
+  box-shadow: 0px 0px 0px 1px var(--primary-accent) inset;
+  font-weight: 700;
+  text-transform: uppercase;
   border-radius: 4px;
-  padding: 8px;
-  border-radius: 4px;
+  padding: 4px 10px;
   display: flex;
   align-items: center;
   cursor: pointer;
   line-height: 16px;
+  font-size: 11px;
+}
+
+button.login:hover,
+button.login:active,
+button.login:focus {
+  background: none;
 }
 
 .loading-bar {
