--- a/src/ui/components/Uploading.css
+++ b/src/ui/components/Uploading.css
@@ -18,7 +18,7 @@
   height: 100%;
 }
 
-.progress-bar {
+.uploading .progress-bar {
   position: relative;
   height: 6px;
   width: 520px;
@@ -27,14 +27,14 @@
   border-radius: 4px;
 }
 
-.progress {
+.uploading .progress {
   height: 6px;
   width: 60px;
   background-color: var(--primary-accent);
   border-radius: 4px 0 0 4px;
 }
 
-.progress-bar .tooltip {
+.uploading .progress-bar .tooltip {
   position: absolute;
   top: -40px;
   left: 30px;
