--- a/src/ui/components/Comments/VideoComments/CommentsOverlay.css
+++ b/src/ui/components/Comments/VideoComments/CommentsOverlay.css
@@ -21,7 +21,6 @@
   transform: translateX(-50%);
   transform: translateY(-50%);
   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
-  cursor: pointer;
 }
 
 .canvas-overlay .canvas-comment-marker:hover,
@@ -31,6 +30,7 @@
   margin-left: -2px;
   background: var(--primary-accent);
   transition: background 200ms;
+  z-index: var(--z-index-3--hovered-comment-primary);
 }
 
 .canvas-overlay .canvas-comment .img.location-marker {
