--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -395,6 +395,7 @@ custom variable for it below so we can keep track of everything in one place. */
   --z-index-2--hovered-point-secondary: var(--z-index-2);
 
   --z-index-3--hovered-point-primary: var(--z-index-3);
+  --z-index-3--hovered-comment-primary: var(--z-index-3);
 
   --z-index-4--name: var(--z-index-4);
   --z-index-5--name: var(--z-index-5);
